--- a/_posts/2025-09-23-post.markdown
+++ b/_posts/2025-09-23-post.markdown
@@ -26,13 +26,15 @@ published: true
 ---
 I'd like to work on a photography book that consists of a series of photographs of various people.
 
-Think large hardcover book — and pags full of faces...
+Think large hardcover book — and pages full of faces...
 
 If you'd like to be photographed — send me a DM on Instagram (@xnslrzn) or email me at solochris14@gmail.com
 
 It can be fun! And I'd like to include MANY MANY people. 
 
 Message me if interested and we can discuss next steps...
+
+And why do I want to do this? Just because... 
 
 Christian
 
