--- a/_posts/2025-09-23-post.markdown
+++ b/_posts/2025-09-23-post.markdown
@@ -28,7 +28,8 @@ I'd like to work on a photography book that consists of a series of photographs 
 
 Think large hardcover book — and pages full of faces...
 
-If you'd like to be photographed — send me a DM on Instagram (@xnslrzn) or email me at solochris14@gmail.com
+If you'd like to be photographed — send me a DM on Instagram (@xnslrzn) or email me at solochris14@gmail.com or if 
+you read this on Instagram, give the story a little tiny pink heart.
 
 It can be fun! And I'd like to include MANY MANY people. 
 
