--- a/_posts/2025-11-10-post.markdown
+++ b/_posts/2025-11-10-post.markdown
@@ -28,11 +28,11 @@ When I was younger, early into my teens — I was exploring the internet and dab
 digital and graphic design. During that time, I made a fan page called GodIsInTheTv.com and it was a site dedicated 
 to Marilyn Manson — like a fan site. 
 
-One day, somebody emailed me, thinking that I was an official Marilyn Manson website and they inquired about where 
+One day, somebody emailed me, thinking that it was an official Marilyn Manson website and they inquired about where 
 they could grab a VHS copy of God Is In The TV, a compilation of music videos and live performances. 
 
 I said, I don't know and also, I am not affiliated with Marilyn Manson, but this person and I became friends (I wish 
-I still remembered his name because he was somebody that I had a lot in common) — then, in my little Christian 
+I still remembered his name because he was somebody that I had a lot in common with) — then, in my little Christian 
 bubble, meeting somebody with an alternative taste in culture was rare, so when you met someone that you clicked 
 with, you wanted to hold onto them.
 
@@ -53,7 +53,7 @@ Christian
 ![Christian Solorzano Photography](/assets/images/diary/20251110a.png)
 
 
-<iframe width="100%" height="315" src="https://www.youtube.com/embed/hntPyPyfa6g?si=dtSLY7KpeWIHihhQ" title="YouTube 
+<iframe width="60%%" height="315" src="https://www.youtube.com/embed/hntPyPyfa6g?si=dtSLY7KpeWIHihhQ" title="YouTube 
 video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
