--- a/_posts/2025-11-10-post.markdown
+++ b/_posts/2025-11-10-post.markdown
@@ -53,7 +53,5 @@ Christian
 ![Christian Solorzano Photography](/assets/images/diary/20251110a.png)
 
 
-<iframe width="60%%" height="315" src="https://www.youtube.com/embed/hntPyPyfa6g?si=dtSLY7KpeWIHihhQ" title="YouTube 
-video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/6kt3fnRZ0DBK1rkGyZBgV7?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
