--- a/_posts/2025-11-20-post.markdown
+++ b/_posts/2025-11-20-post.markdown
@@ -25,7 +25,8 @@ published: true
 
 ---
 I'd like to share two pieces of music which have been on repeat lately, as the days get shorter in Chicago and trees 
-turn bare. Both composed by prolific musicians, John Cage (1912–1992) and Pat Methany (B. 1954) with Lyle Mays (1953–2020).
+turn bare. Both composed by prolific musicians, In a Landscape (1948), John Cage (1912–1992) and As Wichita Falls, So 
+Wichita Falls (1981), Pat Methany (B. 1954) with Lyle Mays (1953–2020).
 
 Both sonic backdrops that carry a gentle presence, existing out of time. Worlds of their own. Desolate cover art. 
 Sweet and poignant.
