--- a/_posts/2024-05-28-post.markdown
+++ b/_posts/2024-05-28-post.markdown
@@ -35,8 +35,8 @@ documentaries, I was confident this would be great — which it was but also, it
 the unseen footage of Eno, his stories and most importantly, his narrative and commentary. My favorite scenes were 
 of Eno playing back old tape recordings and laughing at his younger self and 
 also of Eno in his studio searching 
-his favorite songs on YouTube and being interrupted by YouTube advertisements to which he responds with a middle finger 
-directed at his computer. It's lighthearted, intimate, and personal moments like this that were the highlight of the 
+his favorite songs on YouTube and being interrupted by advertisements to which he responds with a middle finger 
+directed at his computer. It's lighthearted, intimate, and personal moments like these that were the highlight of the 
 film... As a viewer, and I can only assume, many other Eno fans, would have preferred more of this as well. Even if 
 it were a mini-series running multiple hours, or even a 3+ hour documentary.  
 
