--- a/_posts/2025-11-16-post.markdown
+++ b/_posts/2025-11-16-post.markdown
@@ -24,7 +24,7 @@ client: "Self"
 published: true
 
 ---
-There exists a piece of music called ‘Spiegel im Spiegel’, which means Mirror in th Mirror in German. 
+There exists a piece of music called ‘Spiegel im Spiegel’, which means Mirror in the Mirror in German. 
 One of the most hauntingly beautiful sonic minutes to experience.
 It was composed by Arvo Pärt (b.1935), an Estonian composer in 1978.
 
