new mothereffing post

--- a/_posts/2025-11-26-post.markdown
+++ b/_posts/2025-11-26-post.markdown
@@ -25,7 +25,7 @@ published: true
 
 ---
 I hosted a small Friendsgiving dinner with The Chicago Graphic Design Club Team + special guests. A beautiful 
-evening full of joy, positivity, & gratitude.
+evening full of joy, conversation, & gratitude. 
 
 ![Christian Solorzano Photography](/assets/images/diary/20251126a.jpg)
 
