--- a/_posts/2025-11-26-post.markdown
+++ b/_posts/2025-11-26-post.markdown
@@ -35,5 +35,9 @@ evening full of joy, conversation, & gratitude.
 
 ![Christian Solorzano Photography](/assets/images/diary/20251126d.jpg)
 
+![Christian Solorzano Photography](/assets/images/diary/20251126f.jpg)
+
+![Christian Solorzano Photography](/assets/images/diary/20251126g.jpg)
+
 
 
