--- a/_posts/2025-11-26-post.markdown
+++ b/_posts/2025-11-26-post.markdown
@@ -39,5 +39,9 @@ evening full of joy, conversation, & gratitude.
 
 ![Christian Solorzano Photography](/assets/images/diary/20251126g.jpg)
 
+![Christian Solorzano Photography](/assets/images/diary/20251126h.jpg)
+
+![Christian Solorzano Photography](/assets/images/diary/20251126i.jpg)
+
 
 
